2008-11-28  Tim Waugh  <twaugh@redhat.com>

	* Makefile: Version 1.9.44.

2008-11-25  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection_getFile): Save thread state during
	call.
	(Connection_putFile): Likewise.
	(Connection_getDests): Likewise.
	(Connection_getDefault): Likewise.
	(Connection_getPPD): Likewise.
	(Connection_printFile): Likewise.
	(Connection_printFiles): Likewise.

2008-11-24  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection_adminGetServerSettings): Save
	thread state during call.
	(Connection_adminSetServerSettings): Likewise.

2008-11-21  Tim Waugh  <twaugh@redhat.com>

	* Makefile: Version 1.9.43.

2008-11-13  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection_begin_allow_threads,
	Connection_end_allow_threads): Fix these functions so they
	actually work.

2008-11-13  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection_getJobs): Set printer-uri
	attribute instead of job-uri attribute.

2008-11-12  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection): Store thread state in Connection
	data.
	(Connection_begin_allow_threads): Save current thread state.
	(Connection_end_allow_threads): Restore current thread state.
	(Connection_init): Use new functions.
	(Connection_getPPDs): Likewise.
	(Connection_getServerPPD): Likewise.
	(Connection_getDocument): Likewise.
	(Connection_getDevices): Likewise.

2008-08-28  Tim Waugh  <tim@localhost.localdomain>

	* cupsconnection.c (Connection_methods): Documentation fix for
	getJobAttributes.

2008-08-28  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection_getJobAttributes): New parameter
	requested_attributes.

2008-08-28  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (get_requested_attrs): New function for
	extracting requested attributes from list.
	(free_requested_attrs): Deallocate memory.
	(Connection_getPrinterAttributes): Use get/free_requested_attrs.

2008-08-22  Tim Waugh  <twaugh@redhat.com>
