@@ -1,3 +1,8 @@
+2008-12-17  Tim Waugh  <twaugh@redhat.com>
+
+	* cupsconnection.c (Connection_printTestPage): Avoid crash when
+	given bad parameters.
+
 2008-11-28  Tim Waugh  <twaugh@redhat.com>
 
 	* Makefile: Version 1.9.44.
